Format update